--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -7,8 +7,10 @@
     "dev": "pnpm dotenv -- ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/main.ts | pino-pretty",
     "dev:debug": "pnpm dotenv -- ts-node-dev --inspect=9229 -r tsconfig-paths/register --respawn --transpile-only src/main.ts",
     "attribute:dev": "pnpm dotenv -- ts-node-dev -r tsconfig-paths/register --transpile-only src/console.ts run:attribute-packs | pino-pretty",
+    "attribute:dev:today": "pnpm dotenv -- ts-node-dev -r tsconfig-paths/register --transpile-only src/console.ts run:attribute-packs --run-for-today-only | pino-pretty",
     "start": "node dist/apps/backend/src/main.js",
     "attribute": "node dist/apps/backend/src/console.js run:attribute-packs",
+    "attribute:today": "node dist/apps/backend/src/console.js run:attribute-packs --run-for-today-only",
     "build": "tsc -p tsconfig.json && tsc-alias",
     "test": "jest",
     "test:watch": "jest --watch",
